# ImageLib

./: CMakeLists.txt
include/: atlas.h  defineImage.h  image.h  wrapSTB.h
src/: atlas.c  image.c  wrapSTB.c
